--- a/products/templates/home.html
+++ b/products/templates/home.html
@@ -8,6 +8,11 @@
         <title>Document</title>
 </head>
 <body>
-<p>Home</p>
+
+        <a href="{% url 'products:home' %}">Home</a>
+        <a href="{% url 'products:insert' %}">Insert Products</a>
+
+        <p>Home</p>
+
 </body>
 </html>
