--- a/products/templates/insert.html
+++ b/products/templates/insert.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+        <a href="{% url 'products:home' %}">Home</a>
+        <a href="{% url 'products:insert' %}">Insert Products</a>
 
         <div class="container">
                 <div class="col-md-6">
@@ -25,17 +27,23 @@
 
                                {% csrf_token %}
 
-                               <input name="prod_name"  type="text" placeholder="Product Name"  class="form-control" required> <br>
+                               <input name="prod_name"  type="text" placeholder="Product Name"  class="form-control" required>
+                               <br>
 
-                               <input name="prod_price"  type="number" placeholder="Price"  class="form-control" required> <br>
+                               <input name="prod_price"  type="number" placeholder="Price"  class="form-control" required>
+                               <br>
 
-                               <input name="prod_category" type="text" placeholder="Category" class="form-control" required> <br>
+                               <input name="prod_category" type="text" placeholder="Category" class="form-control" required>
+                               <br>
 
-                               <input name="prod_quantity" type="number" placeholder="Quantity"  class="form-control" required> <br>
+                               <input name="prod_quantity" type="number" placeholder="Quantity"  class="form-control" required>
+                               <br>
 
-                               <input name="prod_image" type="file"  class="form-control" required> <br>
+                               <input name="prod_image" type="file"  class="form-control" required>
+                               <br>
 
-                               <textarea name="prod_description" placeholder="Description"  class="form-control" required></textarea> <br>
+                               <textarea name="prod_description" placeholder="Description"  class="form-control" required></textarea>
+                               <br>
 
                                <input type="submit" value="Save" class="btn btn-success">
 
