--- a/products/templates/insert.html
+++ b/products/templates/insert.html
@@ -1,29 +1,13 @@
-<!doctype html>
-<html lang="en">
-<head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+{% extends 'layout.html' %}
 
-        <!--Connect to Bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-              crossorigin="anonymous">
-
-</head>
-<body>
-
-        <a href="{% url 'products:home' %}">Home</a>
-        <a href="{% url 'products:insert' %}">Insert Products</a>
+{% block body %}
 
         <div class="container">
                 <div class="col-md-6">
 
                         <h2>Insert Products</h2>
 
-                       <form action="" method="post" enctype="multipart/form-data">
+                       <form action="/insert_data/" method="post" enctype="multipart/form-data">
 
                                {% csrf_token %}
 
@@ -51,7 +35,6 @@
                 </div>
         </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-</body>
-</html>
+{% endblock %}
