--- a/products/templates/view_products.html
+++ b/products/templates/view_products.html
@@ -50,7 +50,7 @@
                                                 <a href="{% url 'products:update' product.id %}">Edit</a>
                                                 <br>
                                                 
-{#                                                <a href="{% url 'products:delete' %}">Delete</a>#}
+                                                  <a href="{% url 'products:delete' product.id %}">Delete</a>
                                                 <br>
                                                 
                                         </td>
