--- a/products/templates/home.html
+++ b/products/templates/home.html
@@ -1,7 +1,18 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-        
+       <div class="container m-5">
+               <div class="row">
+                        <div class="col-md-6"></div>
+                       <div class="col-md-6">
+                               <form action="/search/" method="get">
+                                       <input type="text" class="form-control" name="search" placeholder="Search...">
+                                       <input type="submit" value="Search" class="btn btn-success mt-2">
+                               </form>
+                       </div>
+               </div>
+       </div>
+
         <p>Home</p>
 
 {% endblock %}
